--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,22 @@
-main {
-   background-image: url("@img/20220903_135233.jpg") 0 0 no-repeat;
-   z-index: 5;
+body {
+   display: flex;
+   flex-direction: column;
 }
 header {
-   height: 200px;
-   background-color: rgb(232, 221, 17);
-   display: block;
-   span {
-      color: green;
-   }
+   flex: 0 1 100px;
+   background-color: yellow;
 }
+main {
+   flex: 1 1 auto;
+   height: 700px;
+   background: url("@img/20220903_135233.jpg") center 0 no-repeat;
+}
+
+footer {
+   flex: 0 1 auto;
+   background-color: blue;
+}
+
 @media (max-width: 768px) {
    main {
       background-color: green;
